@startuml AudioSm
[*] --> PLAYER

state PLAYER {
    [*] --> IDLE

    state IDLE
    state READY
    state LOADING <<dark>>
    state PLAYING <<red>>
    state REPLAYING
    state PAUSED <<blue>>
    state TEXT_DISPLAYED

    '############################ transitions ############################

    IDLE --> READY : FORM_NOT_EMPTY

    READY --> LOADING : PLAY_BTN_CLICKED

    LOADING --> PLAYING : SPEECH_READY
    LOADING --> IDLE : CANCEL

    PLAYING --> PAUSED : PLAY_BTN_CLICKED
    PLAYING --> READY : FORM_NOT_EMPTY
    PLAYING --> IDLE : CANCEL
    PLAYING --> TEXT_DISPLAYED : SPEECH_OVER

    PAUSED --> PLAYING : PLAY_BTN_CLICKED
    PAUSED --> REPLAYING : REPLAY_BTN_CLICKED
    PAUSED --> READY : FORM_NOT_EMPTY
    PAUSED --> IDLE : CANCEL
}

/'! $CONFIG : toml
SmRunnerSettings.transpilerId = "JavaScript"
'/
@enduml
